fix location slab

--- a/index.html
+++ b/index.html
@@ -144,13 +144,13 @@
 				<nav id="primary-menu">
 
 					<!--<ul class="font-light one-page-menu" data-easing="easeInOutExpo" data-speed="1500">-->
-						<!--<li><a href="#" data-href="#section-reviews" class="font-green smoothScroll"><div class="center weight-normal font-orange">New Patient Offers!</div></a></li>-->
-						<!--<li><a href="#" data-href="#no-insurance-link-to" data-offset="60"><div class="center font-light-blue">No Insurance?</div></a></li>-->
-						<!--<li><a href="#" data-href="#section-reviews-2"><div class="center font-green smoothScroll">Reviews</div></a></li>-->
-						<!--<li><a href="#" data-href="#meet-the-team-link-to"><div class="center">Meet the Team</div></a></li>-->
-						<!--<li><a href="#" data-href="#services-link-to"><div class="center">Services</div></a></li>-->
-						<!--<li><a href="#" data-href="#office-tour-link-to"><div class="center">Office Tour</div></a></li>-->
-						<!--<li><a href="#" data-href="#location-link-to"><div class="center">Location</div></a></li>-->
+					<!--<li><a href="#" data-href="#section-reviews" class="font-green smoothScroll"><div class="center weight-normal font-orange">New Patient Offers!</div></a></li>-->
+					<!--<li><a href="#" data-href="#no-insurance-link-to" data-offset="60"><div class="center font-light-blue">No Insurance?</div></a></li>-->
+					<!--<li><a href="#" data-href="#section-reviews-2"><div class="center font-green smoothScroll">Reviews</div></a></li>-->
+					<!--<li><a href="#" data-href="#meet-the-team-link-to"><div class="center">Meet the Team</div></a></li>-->
+					<!--<li><a href="#" data-href="#services-link-to"><div class="center">Services</div></a></li>-->
+					<!--<li><a href="#" data-href="#office-tour-link-to"><div class="center">Office Tour</div></a></li>-->
+					<!--<li><a href="#" data-href="#location-link-to"><div class="center">Location</div></a></li>-->
 					<!--</ul>-->
 					<ul class="font-light one-page-menu" data-easing="easeInOutExpo" data-speed="1500">
 						<li><a href="#section-work" data-href="#section-work" class="smoothScroll font-green"><div class="font-green weight-normal">New Patient Offers!</div></a></li>
@@ -695,48 +695,64 @@
 
 			<a href="#" id="location-link-to"></a>
 			<section id="section-location" style="background-image:url('images/gmap-screenshot.png');">
-				<div class="contact-box-wrap">
-					<div class="contact-box center">
-						<div class="taylor-image-wrap">
-							<img class="mobile-35-width" src="images/taylor-logo-web.png">
-						</div>
-						<div class="address center">
+
+				<!--<div class="contact-box-wrap">-->
+				<div class="container">
+					<div class="row">
+						<div class="col-md-4 col-md-offset-6">
+							<div class="contact-box center">
+
+								<div class="taylor-image-wrap">
+									<img class="mobile-35-width" src="images/taylor-logo-web.png">
+								</div>
+
+								<div class="address center">
 							<span>500 NW 43rd Street, Suite 4<br>
 								Gainsville, FL 32607</span>
-						</div>
-						<div class="patient-hotline-text">
-							<span>New Patient Hotline</span>
-						</div>
-						<div class="font-25">(888) 387-1599</div>
-						<div class="patient-hotline-text">
-							<span>Existing Patients Call</span>
-						</div>
-						<div class="font-17 bottommargin-10">(352) 376-3400</div>
-						<button class="mobile-gone btn background-orange margin-center roboto-condensed font-light font-12" data-toggle="modal" data-target="#myModal"><i class="fa fa-calendar" aria-hidden="true"></i> Request Appointment
-						</button>
-						<div class="mobile-gone">
-							<a href="http://yapi.me/f/view.php?id=52276&guid=%7B406FEB23-99D3-4957-A721-A6440FC72518%7D&tag=cassis&fp=default&nbu=New+Patient+Adult&goto4=https://goo.gl/NaAMHy"  target="_blank" id="btn-forms-bottom" class="button roboto-condensed font-light btn-green-font"><span class="top-up-4"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>View Online Forms</span></a>
-						</div>
-						<div class="row center" id="display-contact-box">
-							<div class="col-xs-6 toppadding-10">
-								<div class="mobile-appear text-right">
-									<button class="btn background-orange margin-center roboto-condensed font-light font-12"><i class="fa fa-calendar" aria-hidden="true"></i> Request Appointment
-									</button>
 								</div>
-							</div>
-							<div class="col-xs-6">
-								<div class="mobile-appear text-left">
+
+								<div class="patient-hotline-text">
+									<span>New Patient Hotline</span>
+								</div>
+
+								<div class="font-25">(888) 387-1599</div>
+
+								<div class="patient-hotline-text">
+									<span>Existing Patients Call</span>
+								</div>
+
+								<div class="font-17 bottommargin-10">(352) 376-3400</div>
+
+								<button class="mobile-gone btn background-orange margin-center roboto-condensed font-light font-12" data-toggle="modal" data-target="#myModal"><i class="fa fa-calendar" aria-hidden="true"></i> Request Appointment
+								</button>
+
+								<div class="mobile-gone">
 									<a href="http://yapi.me/f/view.php?id=52276&guid=%7B406FEB23-99D3-4957-A721-A6440FC72518%7D&tag=cassis&fp=default&nbu=New+Patient+Adult&goto4=https://goo.gl/NaAMHy"  target="_blank" id="btn-forms-bottom" class="button roboto-condensed font-light btn-green-font"><span class="top-up-4"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>View Online Forms</span></a>
 								</div>
+
+								<div class="row center" id="display-contact-box">
+									<div class="col-xs-6 toppadding-10">
+										<div class="mobile-appear text-right">
+											<button class="btn background-orange margin-center roboto-condensed font-light font-12"><i class="fa fa-calendar" aria-hidden="true"></i> Request Appointment
+											</button>
+										</div>
+									</div>
+									<div class="col-xs-6">
+										<div class="mobile-appear text-left">
+											<a href="http://yapi.me/f/view.php?id=52276&guid=%7B406FEB23-99D3-4957-A721-A6440FC72518%7D&tag=cassis&fp=default&nbu=New+Patient+Adult&goto4=https://goo.gl/NaAMHy"  target="_blank" id="btn-forms-bottom" class="button roboto-condensed font-light btn-green-font"><span class="top-up-4"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>View Online Forms</span></a>
+										</div>
+									</div>
+								</div>
+
 							</div>
 						</div>
-						</div>
-
-
-
 					</div>
 				</div>
 
+
+				<!--</div>-->
+
+			</section>
 
 		</div>
 
@@ -761,8 +777,8 @@
 
 </div><!-- #wrapper end -->
 
-	<!-- Modals
-  ============================================= -->
+<!-- Modals
+============================================= -->
 <div id="myModal" class="modal fade" role="dialog">
 	<div class="modal-dialog">
 		<div class="modal-body">
