--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 									<i class="fa fa-star fa-star--custom" aria-hidden="true"></i>
 									<i class="fa fa-star fa-star--custom" aria-hidden="true"></i>
 								</div>
-								<h2 class="gentium-book font-light font-35"><q>Our family has always had excellent dental care. It is nice to have all<br> of our crowns done in one visit instead of waiting a few weeks and<br> having a temporary crown.</q> -Kristin S.</h2>
+								<h3 class="gentium-book font-light font-35"><q>Our family has always had excellent dental care. It is nice to have all<br> of our crowns done in one visit instead of waiting a few weeks and<br> having a temporary crown.</q> -Kristin S.</h3>
 								<div class="row section-1-row">
 									<div class="col-md-6 roboto-condensed section-1-column section-1-column-mobile" id="col-right">
 										<div class="height-30"><h5 class="p-font-size p-no-margin">New Patient Hotline</h5></div>
@@ -103,7 +103,7 @@
 						<div class="container clearfix">
 							<div class="slider-caption slider-caption-center">
 								<h2 class="h2-no-margin">No Insurance?</h2>
-								<h3 class="gentium-book font-light" data-caption-animate="fadeInUp"  data-caption-delay="200">Start Saving Today!</h3>
+								<h3 class="gentium-book font-light">Start Saving Today!</h3>
 								<div class="row section-1-row margin-neg-15">
 									<div class="col-md-6 roboto-condensed section-1-column section-1-column-mobile-2" id="col-right">
 										<div class="height-30"><h5 class="p-font-size p-no-margin">New Patient Hotline</h5></div>
