change spacing for mobile and tablet view in footer

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 						<div class="container clearfix">
 							<div class="slider-caption slider-caption-center">
 								<h2 class="h2-no-margin">No Insurance?</h2>
-								<h3 class="gentium-book font-light">Start Saving Today!</h3>
+								<h3 class="gentium-book font-light" >Start Saving Today!</h3>
 								<div class="row section-1-row margin-neg-15">
 									<div class="col-md-6 roboto-condensed section-1-column section-1-column-mobile-2" id="col-right">
 										<div class="height-30"><h5 class="p-font-size p-no-margin">New Patient Hotline</h5></div>
@@ -516,10 +516,34 @@
 
 			<a id="no-insurance-link-to" href="#"></a>
 			<section id="section-services" class="page-section">
-
-				<div class="container clearfix">
+				<div class="mobile-appear container center">
 					<div class="center" id="insurance-text">
-						<h2 class=" no-text-shadow topmargin-30 font-blue nobottommargin">NO INSURANCE?</h2>
+						<h2 class="no-text-shadow topmargin-30 font-blue nobottommargin">NO INSURANCE?</h2>
+						<span class="section-six-span no-bold font-light-black">Join our Dimensions Dental Membership Club</span>
+					</div>
+					<div class="row">
+						<div class="no-ins-mobile-1 col-lg-2">
+							<h3 class="font-blue">Join Today and Start Saving Money!</h3>
+							<p class="box-text"><i class="fa fa-check-square-o font-blue" aria-hidden="true"></i>Easy Monthly Payments with Plans for All Family Members</p>
+							<p class="box-text"><i class="fa fa-check-square-o font-blue" aria-hidden="true"></i>No Exclusions for Cosmetics or Elective Care, No Yearly Maximum Benefits, and No Deductibles!</p>
+							<p class="box-text nomargin-bottom padding-bottom-15"><i class="fa fa-check-square-o font-blue" aria-hidden="true"></i>Up to 15% Discount on Needed Treatments</p>
+						</div>
+						<div class="no-ins-mobile-2 col-lg-2">
+							<div class="box-right-top">
+								<h5 class="font-blue">MEMBERSHIPS START AT:</h5>
+							</div>
+							<div class="box-right-bottom">
+								<h3 class="font-blue">$28</h3>
+							</div>
+							<div class="button-wrap center">
+								<a href="http://taylor-dentistry.illumitrac.com/#programs" target="_blank" class="btn background-orange"><i class="fa fa-check-square-o font-green-2 check-hover" aria-hidden="true"></i>Find Out More</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="disappear-mobile container clearfix">
+					<div class="center" id="insurance-text">
+						<h2 class="no-text-shadow topmargin-30 font-blue nobottommargin">NO INSURANCE?</h2>
 						<span class="section-six-span no-bold font-light-black">Join our Dimensions Dental Membership Club</span>
 					</div>
 					<div class="section-six-container">
@@ -535,7 +559,7 @@
 						</div>
 						<div class="box-right">
 							<div class="box-right-top">
-								<span class="font-blue">PLANS START AT:</span>
+								<span class="font-blue">MEMBERSHIPS START AT:</span>
 							</div>
 							<div class="box-right-bottom">
 								<span class="dollar font-blue" id="dollar-28">$</span><span id="price-28" class="font-blue">28</span>
@@ -718,7 +742,7 @@
 						<div class="mobile-gone">
 							<a href="http://yapi.me/f/view.php?id=52276&guid=%7B406FEB23-99D3-4957-A721-A6440FC72518%7D&tag=cassis&fp=default&nbu=New+Patient+Adult&goto4=https://goo.gl/NaAMHy"  target="_blank" id="btn-forms-bottom" class="button roboto-condensed font-light btn-green-font"><span class="top-up-4"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>View Online Forms</span></a>
 						</div>
-						<div class="row center" id="display-contact-box">
+						<div class="row center tablet-gone" id="display-contact-box">
 							<div class="col-xs-6 toppadding-10">
 								<div class="mobile-appear text-right">
 									<button class="btn background-orange margin-center roboto-condensed font-light font-12"><i class="fa fa-calendar" aria-hidden="true"></i> Request Appointment
