--- a/index.html
+++ b/index.html
@@ -502,11 +502,11 @@
 			<section id="section-reviews" class="page-section parallax dark" style="background-image:url('images/reviews-section.jpg');">
 
 				<div class="center toppadding">
-					<h2 class="title-white">PATIENT REVIEWS</h2>
+					<h2 class="title-white text-shadow">PATIENT REVIEWS</h2>
 				</div>
 				<div class="reviews">
 					<div class="reviews-wrap">
-						<div id="bf-revz-widget-1693194550" style="-webkit-overflow-scrolling:touch;"><div class="bf-dv"><span class="bf-spn">provided by <a class="bf-pro" href="null" target="_blank">Tyson Steele Associates</a> | powered by <a class="bf-pwr" href="//birdeye.com" target="_blank">BirdEye</a></span></div></div>
+						<div id="bf-revz-widget-1693194550" style="-webkit-overflow-scrolling:touch;"><div class="bf-dv"><span class="bf-spn text-white">Provided by <a class="a-text-white bf-pro" href="null" target="_blank">Tyson Steele Associates</a></span></div></div>
 					</div>
 				</div>
 
