added text-white class

--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@
 	<footer id="footer" class="footer">
 		<div id="copyrights">
 			<div class="copyright-text">Copyrights &copy; 2016 All Rights Reserved by 
-				<a href="http://www.tysonsteele.com" target="_blank">Tyson Steele Associates.</a>
+				<a href="http://www.tysonsteele.com" class="text-white" target="_blank">Tyson Steele Associates.</a>
 			</div><!-- /.copyright-text -->
 			<div class="social-icon-wrap fright vertical-align" style="">
 				<a href="https://www.facebook.com/TaylorDentistry" target="_blank" class="social-icon si-small si-borderless si-facebook">
