add styling for tysone steele link on footer

--- a/index.html
+++ b/index.html
@@ -144,22 +144,13 @@
         ============================================= -->
 				<nav id="primary-menu">
 
-					<!--<ul class="font-light one-page-menu" data-easing="easeInOutExpo" data-speed="1500">-->
-					<!--<li><a href="#" data-href="#section-reviews" class="font-green smoothScroll"><div class="center weight-normal font-orange">New Patient Offers!</div></a></li>-->
-					<!--<li><a href="#" data-href="#no-insurance-link-to" data-offset="60"><div class="center font-light-blue">No Insurance?</div></a></li>-->
-					<!--<li><a href="#" data-href="#section-reviews-2"><div class="center font-green smoothScroll">Reviews</div></a></li>-->
-					<!--<li><a href="#" data-href="#meet-the-team-link-to"><div class="center">Meet the Team</div></a></li>-->
-					<!--<li><a href="#" data-href="#services-link-to"><div class="center">Services</div></a></li>-->
-					<!--<li><a href="#" data-href="#office-tour-link-to"><div class="center">Office Tour</div></a></li>-->
-					<!--<li><a href="#" data-href="#location-link-to"><div class="center">Location</div></a></li>-->
-					<!--</ul>-->
 					<ul class="font-light one-page-menu" data-easing="easeInOutExpo" data-speed="1500">
 						<li><a href="#section-work" data-href="#section-work" class="smoothScroll font-green"><div class="font-green weight-normal">New Patient Offers!</div></a></li>
 						<li><a href="#" data-href="#section-services" data-offset="60"><div>No Insurance?</div></a></li>
 						<li><a href="#" data-href="#section-reviews"><div>Reviews</div></a></li>
 						<li><a href="#" data-href="#section-about"><div>Meet the Team</div></a></li>
 						<li><a href="#" data-href="#section-pricing"><div>Services</div></a></li>
-						<li><a href="#" data-href="#section-smile-gallery"><div>Gallery</div></a></li>
+						<li><a href="#" data-href="#section-tour"><div>Gallery</div></a></li>
 						<li><a href="#" data-href="#section-location"><div>Location</div></a></li>
 					</ul>
 
