--- a/index.html
+++ b/index.html
@@ -591,50 +591,50 @@
 
 							<div class="service-accordion ui-accordion ui-widget ui-helper-reset" role="tablist">
 
-								<h3 class="ui-accordion-header ui-state-default ui-accordion-icons ui-corner-all" role="tab" id="ui-id-9"
-										aria-controls="ui-id-10" aria-selected="false" aria-expanded="false" tabindex="-1"><span
+								<h3 class="ui-accordion-header ui-state-default ui-accordion-icons ui-corner-all" role="tab" id="ui-id-1"
+										aria-controls="ui-id-2" aria-selected="false" aria-expanded="false" tabindex="-1"><span
 										class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span><i
-										class="fa fa-check-square-o"></i> Composite fillings</h3>
-								<div class="ui-accordion-content ui-helper-reset ui-widget-content ui-corner-bottom folded" id="ui-id-10"
-										 aria-labelledby="ui-id-9" role="tabpanel" aria-hidden="true">
-									<p>Our doctors use only the highest-quality biocompatible, tooth-colored restorations to create healthy,
-										beautiful smiles. Since the composite material adheres directly to the tooth enamel, less preparation
-										of the tooth is required before using it.</p>
-									<p class="nobottommargin">This means it is more durable and provides a more natural-looking result.</p>
+										class="fa fa-check-square-o"></i> Cosmetic Dentistry</h3>
+								<div class="ui-accordion-content ui-helper-reset ui-widget-content ui-corner-bottom folded" id="ui-id-2"
+										 aria-labelledby="ui-id-1" role="tabpanel" aria-hidden="true">
+									<p>Cosmetic dentistry can encompass things such as tooth-colored fillings, dental implants, or crowns.
+										We have many options, so please call us for a free cosmetic&nbsp;consultation.</p>
+									<p class="nobottommargin">A beautiful, bright, healthy smile can increase self confidence and overall
+										life satisfaction.</p>
 								</div>
 
-								<h3 class="ui-accordion-header ui-state-default ui-accordion-icons ui-corner-all" role="tab" id="ui-id-11"
-										aria-controls="ui-id-12" aria-selected="false" aria-expanded="false" tabindex="-1"><span
+								<h3 class="ui-accordion-header ui-state-default ui-accordion-icons ui-corner-all" role="tab" id="ui-id-3"
+										aria-controls="ui-id-4" aria-selected="false" aria-expanded="false" tabindex="-1"><span
 										class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span><i
-										class="fa fa-check-square-o"></i> Porcelain Veneers</h3>
-								<div class="ui-accordion-content ui-helper-reset ui-widget-content ui-corner-bottom folded" id="ui-id-12"
-										 aria-labelledby="ui-id-11" role="tabpanel" aria-hidden="true">
-									<p class="nobottommargin">Veneers are very thin porcelain pieces that are custom made to adhere directly
-										to the front of teeth without grinding or shaving. Transform your smile without drilling on your
-										natural teeth!</p>
+										class="fa fa-check-square-o"></i> Crowns &amp; bridges</h3>
+								<div class="ui-accordion-content ui-helper-reset ui-widget-content ui-corner-bottom folded" id="ui-id-4"
+										 aria-labelledby="ui-id-3" role="tabpanel" aria-hidden="true">
+									<p>Protect and keep badly decayed or fractured teeth while maintaining a beautiful smile.</p>
+									<p class="nobottommargin">Made to perfectly match the shape and shade of your other teeth, they’re
+										durable, strong, and&nbsp;undetectable.</p>
 								</div>
 
-								<h3 class="ui-accordion-header ui-state-default ui-accordion-icons ui-corner-all" role="tab" id="ui-id-13"
-										aria-controls="ui-id-14" aria-selected="false" aria-expanded="false" tabindex="-1"><span
+								<h3 class="ui-accordion-header ui-state-default ui-accordion-icons ui-corner-all" role="tab" id="ui-id-5"
+										aria-controls="ui-id-6" aria-selected="false" aria-expanded="false" tabindex="-1"><span
 										class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span><i
-										class="fa fa-check-square-o"></i> Cosmetic Bonding</h3>
-								<div class="ui-accordion-content ui-helper-reset ui-widget-content folded ui-corner-bottom" id="ui-id-14"
-										 aria-labelledby="ui-id-13" role="tabpanel" aria-hidden="true">
-									<p class="nobottommargin">Composite resin is a white, tooth colored material that can be shaded to match
-										your teeth. This material can give you a low-cost improvement in your smile.</p>
+										class="fa fa-check-square-o"></i> Oral sedation</h3>
+								<div class="ui-accordion-content ui-helper-reset ui-widget-content ui-corner-bottom folded" id="ui-id-6"
+										 aria-labelledby="ui-id-5" role="tabpanel" aria-hidden="true">
+									<p class="nobottommargin">Sedation dentistry is an excellent treatment for patients with extensive
+										dental needs, or who are concerned about anxiety, difficulty getting numb, or
+										sensitive&nbsp;teeth.</p>
 								</div>
 
 								<h3 class="ui-accordion-header ui-state-default ui-accordion-icons ui-accordion-header-active ui-state-active ui-corner-top"
-										role="tab" id="ui-id-15" aria-controls="ui-id-16" aria-selected="true" aria-expanded="true"
+										role="tab" id="ui-id-7" aria-controls="ui-id-8" aria-selected="true" aria-expanded="true"
 										tabindex="0"><span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-s"></span><i
-										class="fa fa-check-square-o"></i> Periodontal Therapy</h3>
+										class="fa fa-check-square-o"></i> Smile whitening</h3>
 								<div
-										class="folded ui-accordion-content ui-helper-reset ui-widget-content ui-corner-bottom ui-accordion-content-active"
-										id="ui-id-16" aria-labelledby="ui-id-15" role="tabpanel" aria-hidden="false">
-									<p class="nobottommargin">Gum disease is treated by carefully removing the bacteria and substances that
-										form in the pockets around the teeth. The removal of this material occurs on a microscopic level and
-										requires great skill. Our dental team has had advanced training to effectively remove all of the
-										bacteria.</p>
+										class="ui-accordion-content ui-helper-reset ui-widget-content ui-corner-bottom ui-accordion-content-active folded"
+										id="ui-id-8" aria-labelledby="ui-id-7" role="tabpanel" aria-hidden="false">
+									<p class="nobottommargin">Many everyday things like coffee, tea and wine can significantly dull teeth.
+										Smile-whitening enables us to significantly brighten your smile for that dazzling white smile you
+										deserve.</p>
 								</div>
 
 							</div>
@@ -854,14 +854,19 @@
   ============================================= -->
 	<footer id="footer" class="footer">
 		<div id="copyrights">
-			<div class="copyright-text">Copyrights &copy; 2016 All Rights Reserved by 
-				<a href="http://www.tysonsteele.com" class="text-white" target="_blank">Tyson Steele Associates.</a>
-			</div><!-- /.copyright-text -->
-			<div class="social-icon-wrap fright vertical-align" style="">
-				<a href="https://www.facebook.com/TaylorDentistry" target="_blank" class="social-icon si-small si-borderless si-facebook">
-					<i class="icon-facebook"></i>
-					<i class="icon-facebook"></i>
-				</a>
+			<div class="row">
+				<div class="col-lg-3">
+				</div>
+				<div class="col-lg-6">
+					<div class="copyright-text">Copyrights &copy; 2016 All Rights Reserved by
+						<a href="http://www.tysonsteele.com" class="text-white" target="_blank">Tyson Steele Associates.</a>
+					</div><!-- /.copyright-text -->
+				</div>
+				<div class="col-lg-3">
+					<div class="footer-image">
+							<a href="https://www.facebook.com/TaylorDentistry" target="_blank"><img src="images/like-us-facebook.png" class="img-responsive footer-image"></a>
+					</div>
+				</div>
 			</div>
 		</div>
 
