change footer spacing

--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
 
 					<div class="row">
 						<div class="col-sm-4">
-							<img src="images/crowns-service.jpg" alt="Why choose Us?">
+							<img src="images/crowns-service.jpg" alt="Wh choose Us?">
 
 							<div class="service-accordion ui-accordion ui-widget ui-helper-reset" role="tablist">
 
