--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
 
 					<div class="row">
 						<div class="col-sm-4">
-							<img src="images/crowns-service.jpg" alt="Wh choose Us?">
+							<img src="images/cosmetic-service.jpg" alt="Wh choose Us?">
 
 							<div class="service-accordion ui-accordion ui-widget ui-helper-reset" role="tablist">
 
@@ -631,7 +631,7 @@
 							</div>
 						</div>
 						<div class="col-sm-4">
-							<img src="images/crowns-service.jpg" alt="Why choose Us?">
+							<img src="images/relax-service.jpg" alt="Why choose Us?">
 
 							<div class="service-accordion ui-accordion ui-widget ui-helper-reset" role="tablist">
 
