--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 	<!--TODO Insert the title from gather content-->
 	<title>Taylor Dentistry</title>
 	<link rel="stylesheet" href="css/custom.css" type="text/css" />
-
+	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto+Condensed">
+	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Gentium+Basic">
+	<link rel="stylesheet" href="css/custom.css" type="text/css" />
 
 </head>
 
