change font colors on nav bar

--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
 				<nav id="primary-menu">
 
 					<ul class="font-light one-page-menu" data-easing="easeInOutExpo" data-speed="1500">
-						<li><a href="#section-work" data-href="#section-work" class="smoothScroll font-green"><div class="font-green weight-normal">New Patient Offers!</div></a></li>
-						<li><a href="#" data-href="#section-services" data-offset="60"><div>No Insurance?</div></a></li>
-						<li><a href="#" data-href="#section-reviews"><div>Reviews</div></a></li>
+						<li><a href="#section-work" data-href="#section-work" class="smoothScroll font-green"><div class="weight-normal font-orange">New Patient Offers!</div></a></li>
+						<li><a href="#" data-href="#section-services" data-offset="60"><div class="font-light-blue">No Insurance?</div></a></li>
+						<li><a href="#" data-href="#section-reviews"><div class="font-green">Reviews</div></a></li>
 						<li><a href="#" data-href="#section-about"><div>Meet the Team</div></a></li>
 						<li><a href="#" data-href="#section-pricing"><div>Services</div></a></li>
 						<li><a href="#" data-href="#section-tour"><div>Gallery</div></a></li>
