change underline colors on hover in navbar

--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
 				<nav id="primary-menu">
 
 					<ul class="font-light one-page-menu" data-easing="easeInOutExpo" data-speed="1500">
-						<li><a href="#section-work" data-href="#section-work" class="smoothScroll font-green"><div class="weight-normal font-orange">New Patient Offers!</div></a></li>
-						<li><a href="#" data-href="#section-services" data-offset="60"><div class="font-light-blue">No Insurance?</div></a></li>
-						<li><a href="#" data-href="#section-reviews"><div class="font-green">Reviews</div></a></li>
+						<li><a href="#section-work" data-href="#section-work" class="smoothScroll font-green"><div class="weight-normal font-orange new-patient-hover">New Patient Offers!</div></a></li>
+						<li><a href="#" data-href="#section-services" data-offset="60"><div class="font-light-blue no-insurance-hover">No Insurance?</div></a></li>
+						<li><a href="#" data-href="#section-reviews"><div class="font-green reviews-hover">Reviews</div></a></li>
 						<li><a href="#" data-href="#section-about"><div>Meet the Team</div></a></li>
 						<li><a href="#" data-href="#section-pricing"><div>Services</div></a></li>
 						<li><a href="#" data-href="#section-tour"><div>Gallery</div></a></li>
@@ -294,7 +294,7 @@
 								<div class="modal-body">
 									<div class="modal-content">
 										<div class="modal-header">
-											<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+											<button type="button" class="close" data-dismiss="modal" aria-hidden="false">&times;</button>
 											<h4 class="modal-title">Connie Aledter</h4>
 										</div>
 										<div class="modal-body team__modal-pic">
