change modal colors

--- a/index.html
+++ b/index.html
@@ -872,6 +872,9 @@
 		<div class="modal-body">
 			<div class="modal-content">
 				<div class="modal-body">
+					<div class="modal-header-close">
+					<button type="button" class="close close-2 roll-over" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+				</div>
 					<!-- Modal content-->
 					<form id="mail-form" action="//web-api.tysonsteele.com/v1/webprops/KEY/notify">
 						<h5>YES! Please contact me to schedule an appointment or answer any questions I might still have:</h5>
