fix graphics of hover on team member images

--- a/index.html
+++ b/index.html
@@ -234,7 +234,9 @@
 						<div class="team-member">
 							<a href="#" data-toggle="modal" data-target="#connie">
 								<div class="team-image">
-									<i class="fa fa-plus fa-3x" aria-hidden="true"></i>
+									<div class="plus-icon-wrapper">
+											<i class="fa fa-plus fa-3x" aria-hidden="true"></i>
+										</div>
 									<img src="images/team/connie.jpg" alt="connie">
 								</div>
 								<h4 class="team-name">Connie Aledter</h4>
@@ -244,7 +246,9 @@
 						<div class="team-member">
 							<a href="#" data-toggle="modal" data-target="#trevor">
 								<div class="team-image">
-									<i class="fa fa-plus fa-3x" aria-hidden="true"></i>
+									<div class="plus-icon-wrapper">
+											<i class="fa fa-plus fa-3x" aria-hidden="true"></i>
+										</div>
 									<img src="images/team/trevor.jpg" alt="trevor">
 								</div>
 								<h4 class="team-name">Trevor Crovitz</h4>
@@ -254,7 +258,9 @@
 						<div class="team-member">
 							<a href="#" data-toggle="modal" data-target="#cara">
 								<div class="team-image">
-									<i class="fa fa-plus fa-3x" aria-hidden="true"></i>
+									<div class="plus-icon-wrapper">
+											<i class="fa fa-plus fa-3x" aria-hidden="true"></i>
+										</div>
 									<img src="images/team/cara.jpg" alt="cara">
 								</div>
 								<h4 class="team-name">Cara Barfield</h4>
@@ -264,7 +270,9 @@
 						<div class="team-member">
 							<a href="#" data-toggle="modal" data-target="#kat">
 								<div class="team-image">
-									<i class="fa fa-plus fa-3x" aria-hidden="true"></i>
+									<div class="plus-icon-wrapper">
+											<i class="fa fa-plus fa-3x" aria-hidden="true"></i>
+										</div>
 									<img src="images/team/kat.jpg" alt="kat">
 								</div>
 								<h4 class="team-name">Kat Crews</h4>
@@ -274,7 +282,9 @@
 						<div class="team-member">
 							<a href="#" data-toggle="modal" data-target="#brittany">
 								<div class="team-image">
-									<i class="fa fa-plus fa-3x" aria-hidden="true"></i>
+									<div class="plus-icon-wrapper">
+											<i class="fa fa-plus fa-3x" aria-hidden="true"></i>
+										</div>
 									<img src="images/team/brittney.jpg" alt="brittany">
 								</div>
 								<h4 class="team-name">Brittany</h4>
