change navbar colors

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 									</div>
 								</div>
 								<div class="row center">
-									<h5 class="top-15">Existing patients of our practice <span class="phone-font-size margin-left-3" id="section-one-phone">(352) <span class="margin-left-3">376-3400</span></h5>
+									<h5 class="top-15"><span style=>Existing patients of our practice</span><span class="phone-font-size margin-left-3" id="section-one-phone">(352) <span class="margin-left-3">376-3400</span></h5>
 								</div>
 							</div>
 						</div>
@@ -95,7 +95,7 @@
 									</div>
 								</div>
 								<div class="row center">
-									<h5 class="top-15">Existing patients of our practice <span class="phone-font-size margin-left-3" id="section-one-phone">(352) <span class="margin-left-3">376-3400</span></h5>
+									<h5 class="top-15 text-white">Existing patients of our practice (352) 376-3400</h5>
 								</div>
 							</div>
 						</div>
