--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
 									<div class="section-1-column-mobile col-md-6 roboto-condensed section-1-column" id="col-right">
 										<div class="height-30"><h5 class="p-font-size p-no-margin">New Patient Hotline</h5></div>
 
-										<div><h4 class="font-green">(888) 387-1599</h4></div>
+										<div><h4 class="font-green-2">(888) 387-1599</h4></div>
 									</div>
 									<div class="col-md-6" id="col-left">
 										<div class="btn-wrap float-left">
-											<button class="btn btn-green green" id="move-up" data-toggle="modal" data-target="#myModal"><i class="fa fa-calendar" aria-hidden="true"></i><span class="margin-left-3 font-light"> Request Appointment </button>
+											<button class="btn background-orange" id="move-up" data-toggle="modal" data-target="#myModal"><i class="fa fa-calendar" aria-hidden="true"></i><span class="margin-left-3 font-light"> Request Appointment </button>
 										</div>
 									</div>
 								</div>
@@ -83,12 +83,12 @@
 								<div class="row section-1-row">
 									<div class="col-md-6 roboto-condensed section-1-column section-1-column-mobile" id="col-right">
 										<div class="height-30"><h5 class="p-font-size p-no-margin">New Patient Hotline</h5></div>
-										<div><h4 class="font-green">(888) 387-1599</h4></div>
+										<div><h4 class="font-green-2">(888) 387-1599</h4></div>
 									</div>
 									<div class="col-md-6" id="col-left">
 										<div class="btn-wrap float-left">
 											<div class="btn-wrap float-left float-left-mobile roll-over top-mobile">
-												<a href="#section-reviews-2" data-href="#section-reviews-link" class="smoothScroll btn-green paddinglr-40 btn" id="move-up" ><i class="fa fa-comment" aria-hidden="true"></i><span class="font-light margin-left-3"> Read Our Reviews</a>
+												<a href="#section-reviews-2" data-href="#section-reviews-link" class="background-orange smoothScroll paddinglr-40 btn" id="move-up" ><i class="fa fa-comment" aria-hidden="true"></i><span class="font-light margin-left-3"> Read Our Reviews</a>
 											</div>
 										</div>
 									</div>
@@ -107,12 +107,12 @@
 								<div class="row section-1-row margin-neg-15">
 									<div class="col-md-6 roboto-condensed section-1-column section-1-column-mobile-2" id="col-right">
 										<div class="height-30"><h5 class="p-font-size p-no-margin">New Patient Hotline</h5></div>
-										<div><h4 class="font-green">(888) 387-1599</h4></div>
+										<div><h4 class="font-green-2">(888) 387-1599</h4></div>
 									</div>
 									<div class="col-md-6" id="col-left">
 										<div class="btn-wrap float-left">
 											<a href="https://taylor-dentistry.illumitrac.com/" target="_blank">
-												<button class="btn btn-green green" id="move-up"><i class="fa fa-check-square-o" aria-hidden="true"></i><span class="font-light">Join Our Membership Club </button>
+												<button class="btn background-orange" id="move-up"><i class="fa fa-check-square-o" aria-hidden="true"></i><span class="font-light">Join Our Membership Club </button>
 											</a>
 										</div>
 									</div>
@@ -468,7 +468,7 @@
 				<div class="row section-1-row">
 					<div class="col-md-6 roboto-condensed section-1-column" id="col-right">
 						<div class="height-30"><h5 class="font-14 font-light-black">New Patient Hotline</h5></div>
-						<div><h4 class="font-light-black">(888) 387-1599</h4></div>
+						<div><h4 class="font-green-2">(888) 387-1599</h4></div>
 					</div>
 					<div class="col-md-6" id="col-left">
 						<div class="btn-wrap float-left">
