add pixel background to all white sections

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 			</section>
 
 			<a id="meet-the-team-link-to" href="#"></a>
-			<section id="section-about" style="background-image:url('images/cream_pixels.png');" class="page-section">
+			<section id="section-about" class="section" style="background-image:url('images/cream_pixels.png');" class="page-section">
 
 				<div class="container clearfix">
 
@@ -429,7 +429,7 @@
 
 
 								<h3 class="price-box-h3 green-1">New Patient Dental Exam &amp; X-Rays</h3>
-								<h4 class="font-light green-1">Save $xx</h4>
+								<h4 class="font-light green-1">Save $227</h4>
 								<p class="price-box-p">Includes comprehensive exam by the doctor and necessary x-rays.</p>
 								<p>(D0150, D0210)</p>
 							</div>
@@ -441,8 +441,8 @@
 								<div class="price-box-price"><span class="dollar">$</span>45</div>
 
 
-								<h3 class="price-box-h3-mid">New Patient Dental Exam &amp; X-Rays</h3>
-								<h4 class="price-box-h4-mid no-bold">Save $xx</h4>
+								<h3 class="price-box-h3-mid">New Patient Professional Cleaning</h3>
+								<h4 class="price-box-h4-mid no-bold">Save $55</h4>
 								<p class="price-box-p">Includes a professional dental cleaning. A new patient exam is required. Does not include periodontal therapy.</p>
 								<p>(D1110)</p>
 							</div>
@@ -452,8 +452,8 @@
 							<div class="price-box-content">
 								<div class="price-box-price gentium-book"><span class="dollar color-purple-3">$</span><span class="color-purple-3 grentium-book">99</div>
 
-								<h3 class="price-box-h3 color-blue-1">New Patient Dental Exam &amp; X-Rays</h3>
-								<h4 class="no-bold color-blue-1 price-mobile">Save $xx</h4>
+								<h3 class="price-box-h3 color-blue-1">New Children's Exam &amp; Cleaning</h3>
+								<h4 class="no-bold color-blue-1 price-mobile">Save $317</h4>
 								<p class="price-box-p color-blue-1 roboto-condensed ">Patients 12 and under receive a professional dental cleaning, fluoride treatment, needed x-rays, and a comprehensive exam.</p>
 								<p class="color-purple-3">(D1120, D1208, D0274, D0150)</p>
 							</div>
@@ -464,11 +464,11 @@
 				</div>
 			</section>
 
-			<section id="section-hotline">
+			<section id="section-hotline" class="section" style="background-image:url('images/cream_pixels.png');">
 				<div class="row section-1-row">
 					<div class="col-md-6 roboto-condensed section-1-column" id="col-right">
 						<div class="height-30"><h5 class="font-14 font-light-black">New Patient Hotline</h5></div>
-						<div><h4 class="font-green-2">(888) 387-1599</h4></div>
+						<div><h4 class="">(888) 387-1599</h4></div>
 					</div>
 					<div class="col-md-6" id="col-left">
 						<div class="btn-wrap float-left">
@@ -569,7 +569,7 @@
 
 			<!-- Pricing
 			============================================= -->
-			<section id="section-pricing" class="page-section">
+			<section id="section-pricing" class="page-section section" style="background-image:url('images/cream_pixels.png');">
 				<div class="container clearfix">
 
 					<div class="center bottommargin">
@@ -758,7 +758,7 @@
 
 			<!-- Tour
 			============================================= -->
-			<section id="section-tour">
+			<section id="section-tour" class="section" style="background-image:url('images/cream_pixels.png');">
 				<div class="center bottommargin-20">
 					<h2 class="topmargin-30 bottommargin-20 font-blue">OFFICE TOUR</h2>
 					<span class="font-light-black">Our state-of-the-art office and pleasant, relaxing atmosphere awaits you.</span>
@@ -922,7 +922,7 @@
 
 <script type="text/javascript" src="js/functions.js"></script>
 <script type="text/javascript" src="js/custom.js"></script>
-<script type="text/javascript" src="http://birdeye.com/embed/v4/147025711192168/3/1693194550"></script>
+<!-- <script type="text/javascript" src="http://birdeye.com/embed/v4/147025711192168/3/1693194550"></script> -->
 
 </body>
 </html>
