add styling classes to services button

--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@
 										way to pay for the costs of many treatments and procedures and allows you to make convenient monthly
 										payments.</p>
 									<a href="http://www.carecredit.com/doctor-locator/General-Dentistry-in-ROSEBURG-OR-97471/Jeffrey-A-Kobernik-DMD-PC/"
-										 target="_blank" class="button btn-lg btn-block text-center nomargin">More Information</a>
+										 target="_blank" class="button btn background-orange margin-center roboto-condensed font-light font-12 btn-lg btn-block text-center nomargin">More Information</a>
 								</div>
 
 								<h3 class="ui-accordion-header ui-state-default ui-corner-all ui-accordion-icons" role="tab" id="ui-id-23"
@@ -818,7 +818,7 @@
 
 								<div class="font-17 bottommargin-10">(352) 376-3400</div>
 
-								<button class=" btn background-orange margin-center roboto-condensed font-light font-12" data-toggle="modal" data-target="#myModal"><i class="fa fa-calendar" aria-hidden="true"></i> Request Appointment
+								<button class="btn background-orange margin-center roboto-condensed font-light font-12" data-toggle="modal" data-target="#myModal"><i class="fa fa-calendar" aria-hidden="true"></i> Request Appointment
 								</button>
 
 								<div class="">
