--- a/index.html
+++ b/index.html
@@ -137,7 +137,14 @@
 			<div class="container clearfix" id="nav-bar-mobile">
 
 				<div id="primary-menu-trigger"><i class="fa fa-bars" aria-hidden="true"></i></div>
-
+				<!-- Logo
+                ============================================= -->
+				<div id="logo">
+					<a href="index.html" class="standard-logo"><img src="images/taylor-logo-web.png"
+																													alt="Canvas Logo"></a>
+					<a href="index.html" class="retina-logo"><img
+							src="images/taylor-logo-web.png" alt="Canvas Logo"></a>
+				</div><!-- #logo end -->
 
 
 				<!-- Primary Navigation
